--- a/app.css
+++ b/app.css
@@ -16,12 +16,11 @@ body {
   color: rgb(141, 141, 141);
   font-family: 'Lato', Helvetica, sans-serif;
   line-height: 1.5;
-  
 }
 .game-container {
   overflow: hidden;
   width: 100%;
-  
+
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -58,7 +57,6 @@ h1 {
   text-align: center;
   line-height: 100%;
   display: flex;
-
 }
 .puzzle span {
   /* border-bottom: 1px solid #534f59; */
@@ -88,7 +86,7 @@ h1 {
     width: 2rem;
   }
 }
-.reamining-guesses-container{
+.reamining-guesses-container {
   padding-bottom: 1rem;
 }
 .remainingGuess {
@@ -97,7 +95,7 @@ h1 {
 .message {
   height: 1rem;
   text-align: center;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   margin-bottom: 1rem;
   transition: var(--transition);
 }
@@ -115,7 +113,7 @@ h1 {
 
 .wrong-title {
   font-size: 1.3rem;
-  letter-spacing: .25rem;
+  letter-spacing: 0.25rem;
 }
 .wrong-letters-container {
   text-align: center;
@@ -125,13 +123,13 @@ h1 {
   justify-content: space-between;
 }
 .wrong-letter {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   font-size: 1.75rem;
-  letter-spacing: .75rem;
+  letter-spacing: 0.75rem;
 }
-.remaining-guesses{
+.remaining-guesses {
   font-size: 1.3rem;
-  letter-spacing: .25rem;
+  letter-spacing: 0.25rem;
 }
 
 .form {
@@ -170,17 +168,17 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-.first-quarter{
+.first-quarter {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.second-quarter{
+.second-quarter {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.third-quarter{
+.third-quarter {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -191,24 +189,23 @@ h1 {
   display: flex;
   justify-content: flex-start;
 }
-.keyboard button{
+.keyboard button {
   width: 14%;
-  padding: .5rem;
-  margin-bottom: .25rem;
+  padding: 0.5rem;
+  margin-bottom: 0.25rem;
   background-color: transparent;
   color: rgb(141, 141, 141);
   border: 1px solid rgb(141, 141, 141);
-  border-radius: var(--radius)
+  border-radius: var(--radius);
 }
-.forth-quarter button{
+.forth-quarter button {
   margin-right: 2px;
 }
-.keyboard button:hover{
-  background-color: #fff; 
-  transform:scale(1.1);
-  transition: var(--transition)
+.keyboard button:hover {
+  background-color: #fff;
+  transform: scale(1.1);
+  transition: var(--transition);
 }
-
 
 /* modal ------------------------------ */
 @keyframes modalOpen {
